--- a/torneSeUmMilionario/src/Comecar/comecar.css
+++ b/torneSeUmMilionario/src/Comecar/comecar.css
@@ -54,6 +54,7 @@ button {
     cursor: pointer;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
+    margin-left: 10px;
 }
 
 button:hover {
